# sandooq

./: db.sqlite3  gunicorn.service  pyproject.toml  requirements.txt
core/: asgi.py  helpers.py  settings.py  urls.py  wsgi.py
core/static/css/: front-dashboard.css
core/static/js/: loan.js  transaction.js
finance/: admin.py  models.py  signals.py  views.py
finance/migrations/: 0001_initial.py  0002_remove_transaction_user_transaction_share_and_more.py  0003_bankaccount_transaction_bank_account.py  0004_bankaccount_card_number_bankaccount_shaba_number.py  0005_alter_transaction_bank_account.py  0006_transaction_bank_balance.py  0007_remove_transaction_share_transaction_user.py  0008_alter_transaction_bank_balance.py  0009_transaction_installments.py  0010_transaction_notes_transaction_share_assets_and_more.py  0011_transaction_accounting_done_and_more.py
loans/: admin.py  models.py  signals.py
loans/migrations/: 0001_initial.py  0002_loan_last_installment_amount_loan_number_and_more.py  0003_remove_installment_status_installment_due_date_and_more.py  0004_loan_bank_account.py
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_share.py  0003_alter_user_options.py  0004_alter_share_asset.py
users/templates/front/: dashboard.html  login.html
