[tool.poetry]
name = "sandooq"
version = "0.1.0"
description = ""
authors = ["Hamed Movasaqpoor <hamed.movasaqpoor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
jdatetime = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
